--- a/src/components/sections/navbar&footer/FooterSection.astro
+++ b/src/components/sections/navbar&footer/FooterSection.astro
@@ -12,10 +12,10 @@ import { SITE } from "@data/constants";
 const strings = Astro.currentLocale === "fr" ? frStrings : enStrings;
 
 // Define the variables that will be used in this component
-const sectionThreeTitle: string = Astro.currentLocale === "fr" ? "Rester à jour" : "Stay up to date";
+const sectionThreeTitle: string = Astro.currentLocale === "fr" ? "Rester à jour" : "Manténgase actualizado";
 const sectionThreeContent: string = Astro.currentLocale === "fr" ? "Restez informé des derniers outils et des offres exclusives." :
-  "Stay updated with the latest tools and exclusive deals.";
-const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Crafted by";
+  "Manténgase actualizado con las últimas herramientas y ofertas exclusivas.";
+const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Fabricado por";
 ---
 
 <footer class="w-full bg-neutral-300 dark:bg-neutral-900">
@@ -79,7 +79,7 @@ const crafted: string = Astro.currentLocale === "fr" ? "Fabriqué par" : "Crafte
             class="rounded-lg font-medium underline underline-offset-2 outline-hidden ring-zinc-500 transition duration-300 hover:text-neutral-700 hover:decoration-dashed focus:outline-hidden focus-visible:ring-3 dark:ring-zinc-200 dark:hover:text-neutral-300"
             href="https://www.gulamoff.dev/"
             target="_blank"
-            rel="noopener noreferrer">gulamoff</a
+            rel="noopener noreferrer">Los 4 amigos</a
           >.
         </p>
       </div>
