4to commit - FastApi instalada,conexión con DB y eso :v

--- a/src/pages/users/dashVendedor.astro
+++ b/src/pages/users/dashVendedor.astro
@@ -123,13 +123,13 @@ const despachosData = [
                   <td class="border border-neutral-700 px-4 py-2">${pedido.total.toFixed(2)}</td>
                   <td class="border border-neutral-700 px-4 py-2">{pedido.estado}</td>
                   <td class="border border-neutral-700 px-4 py-2 flex gap-2">
-                    <button class="flex items-center gap-1 rounded-lg border-green-500 px-3 py-1 text-sm text-white hover:bg-green-600">
+                    <button class="flex items-center gap-1 rounded-lg bg-indigo-500 px-3 py-1 text-sm text-white hover:bg-indigo-600">
                       <CheckCircle class="h-4 w-4" />
-                      Aceptar
+                      
                     </button>
                     <button class="flex items-center gap-1 rounded-lg bg-red-500 px-3 py-1 text-sm text-white hover:bg-red-600">
                       <XCircle class="h-4 w-4" />
-                      Rechazar
+                      
                     </button>
                   </td>
                 </tr>
