--- a/src/components/ui/forms/input/PasswordInput.astro
+++ b/src/components/ui/forms/input/PasswordInput.astro
@@ -1,6 +1,6 @@
 ---
 const {
-  label = "Password",
+  label = "Contraseña",
   forgot,
   id,
   errorId,
@@ -29,7 +29,7 @@ interface Props {
           class="rounded-lg text-sm font-medium text-orange-400 decoration-2 outline-hidden ring-zinc-500 hover:underline focus-visible:ring-3 dark:text-orange-400 dark:ring-zinc-200 dark:focus:outline-hidden dark:focus:ring-1"
           data-hs-overlay="#hs-toggle-between-modals-recover-modal"
         >
-          Forgot password?
+          Olvidaste tu contraseña?
         </button>
       ) : (
         ""
