7to commit - Db y API conectada a dashVendedor

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,6 +1,10 @@
 @import 'tailwindcss';
 @import "preline/variants.css";
 @plugin '@tailwindcss/forms';
+@plugin "flyonui";
+@import "flyonui/variants.css";
+@source "../node_modules/flyonui/flyonui.js";
+@plugin "@iconify/tailwind4";
 
 @custom-variant dark (&:is(.dark *));
 
