--- a/src/components/sections/navbar&footer/Navbar.astro
+++ b/src/components/sections/navbar&footer/Navbar.astro
@@ -11,11 +11,12 @@ import BrandLogo from "@components/BrandLogo.astro";
 // Select the correct translation based on the page's lang prop:
 const strings = Astro.currentLocale === "fr" ? frStrings : enStrings;
 const homeUrl = Astro.currentLocale === "fr" ? "/fr" : "/";
+const {isSticky = true} = Astro.props;
 ---
 
 <!-- Main header component -->
 <header
-  class="sticky inset-x-0 top-4 z-50 flex w-full flex-wrap text-sm md:flex-nowrap md:justify-start"
+  class={`${isSticky ? "sticky inset-x-0 top-4" : ""} z-50 flex w-full flex-wrap text-sm md:flex-nowrap md:justify-start`}
 >
   <!-- Navigation container -->
   <nav
