--- a/src/components/ui/forms/RegisterModal.astro
+++ b/src/components/ui/forms/RegisterModal.astro
@@ -5,13 +5,6 @@ import PasswordInput from "./input/PasswordInput.astro";
 import Checkbox from "./input/Checkbox.astro";
 import GoogleBtn from "@components/ui/buttons/GoogleBtn.astro";
 import AuthBtn from "@components/ui/buttons/AuthBtn.astro";
-//form isa
-import NombreApellidoInput from "./camposInput/NombreApellidoInput.astro";
-import RutInput from "./camposInput/RutInput.astro";
-import DireccionInput from "./camposInput/DireccionInput.astro";
-import TelefonoInput from "./camposInput/TelefonoInput.astro";
-import FechaNacimientoInput from "./camposInput/FechaNacimientoInput.astro";
-import GeneroInput from "./camposInput/GeneroInput.astro";
 
 
 // Config object for customization of the component
@@ -66,42 +59,13 @@ const config = {
               O
             </div>
             <!-- Registration form -->
-            <form method="post">
+            <form method="post" action="/routers/usuarios">
               <div class="grid gap-y-4">
-                <!-- mio -->
-                <NombreApellidoInput
-                  id="register-name"
-                  errorId="register-name-error"
-                  label="Nombre y Apellido"
-                />
-                <RutInput
-                  id="register-rut"
-                  errorId="register-rut-error"
-                  label="Rut"
-                />
-                <DireccionInput
-                  id="register-address"
-                  errorId="register-address-error"
-                  label="Dirección"
-                />
-                <TelefonoInput
-                  id="register-phone"
-                  errorId="register-phone-error"
-                  label="Teléfono"
-                />
-                <FechaNacimientoInput
-                  id="register-birthdate"
-                  errorId="register-birthdate-error"
-                  label="Fecha de Nacimiento"
-                />
-                <GeneroInput
-                  id="register"
-                  errorId="register-gender-error"
-                  label="Género"
-                />
-                <!-- Email input field -->
-                <EmailInput id="register-email" errorId="register-email-error"/>
-                <!-- Password input field -->
+                <!-- Input field for first name and last name -->
+                <EmailInput 
+                  id="register-email"
+                  errorId="register-email-error"/>
+                
                 <PasswordInput
                   id="create-password"
                   errorId="register-password-error"
