--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -4,27 +4,22 @@ import MainLayout from "@/layouts/MainLayout.astro";
 import CardSmall from "@components/ui/cards/CardSmall.astro";
 import CardWide from "@components/ui/cards/CardWide.astro";
 
+// Fetching product data from the API
+const response = await fetch("http://localhost:6500/product", {
+  headers: {
+    "x-api-key": "miclaveultrasecreta123." // Asegúrate de usar la API Key correcta
+  }
+});
 
-// Importing necessary functions from Astro
-import { getCollection } from "astro:content";
-import type { CollectionEntry } from "astro:content";
-import { SITE } from "@data/constants";
+if (!response.ok) {
+  throw new Error("Error al obtener los productos desde la API");
+}
 
-// Fetching all the product related content and sorting it by main.id
-const product: CollectionEntry<"products">[] = (
-  await getCollection("products", ({ id }) => {
-    return id.startsWith("en/");
-  })
-).sort(
-  (a: CollectionEntry<"products">, b: CollectionEntry<"products">) =>
-    a.data.main.id - b.data.main.id,
-);
+const products = await response.json();
 
 // Define variables for page content
 const title: string = "Productos Destacados";
-
-
-const pageTitle: string = `Products | ${SITE.title}`;
+const pageTitle: string = `Products | ScrewFast`;
 ---
 
 <MainLayout
@@ -55,11 +50,10 @@ const pageTitle: string = `Products | ${SITE.title}`;
         </h1>
       </div>
     </div>
-    <!--Displaying products in alternating styles. Alternative product gets different card styling.-->
-    <!--Maps through all product entries and displays them with either CardSmall or CardWide based on their position.-->
+    <!-- Displaying products dynamically -->
     <section class="grid grid-cols-1 gap-4 sm:grid-cols-3 md:gap-6 xl:gap-8">
       {
-        product.map((product, index) => {
+        products.map((product: any, index: number) => {
           const position = index % 4;
           if (position === 0 || position === 3) {
             return <CardSmall product={product} />;
@@ -70,6 +64,4 @@ const pageTitle: string = `Products | ${SITE.title}`;
       }
     </section>
   </div>
-  
-  
 </MainLayout>
